tests/snapshots/trace_solver@369509874918926758.snap
---
source: tests/trace_solver.rs
info:
  options:
    match_constructor_through_ref: true
    eat_inherited_ref_alone: false
    inherited_ref_on_ref: EatBoth
    fallback_to_outer: false
    allow_ref_pat_on_ref_mut: false
    simplify_deref_mut: true
    downgrade_mut_inside_shared: false
    eat_mut_inside_shared: true
    ref_binding_on_inherited: ResetBindingMode
    mut_binding_on_inherited: ResetBindingMode
  bundle_name: stable_rust
  request: "[&x]: &[T]"
---
[&x] @ s: &[T]
// Applying rule `ConstructorRef`
&x @ &(*s).0: &T
// Type error for `&x @ &(*s).0: &T`: InheritedRefIsAlone
